crates/core/talkbank-parser/src/parser/tier_parsers/snapshots/talkbank_parser__parser__tier_parsers__dependent_tier__snapshot_tests__tier_with_leading_trailing_whitespace.snap
---
source: talkbank-tree-sitter-parser/src/parser/tier_parsers/dependent_tier.rs
assertion_line: 200
expression: "(result, error_vec)"
---
(
    UserDefinedTier {
        label: UserDefinedTierLabel(
            "",
        ),
        content: "",
    },
    [
        ParseError {
            code: InvalidDependentTier,
            severity: Error,
            location: SourceLocation {
                span: Span {
                    start: 0,
                    end: 0,
                },
            },
            context: ErrorContext {
                source_text: "  %pho:\ta b c  ",
                span: Span {
                    start: 0,
                    end: 15,
                },
                expected: [],
                found: "  %pho:\ta b c  ",
            },
            labels: [],
            message: "No dependent tier found in parsed structure",
            suggestion: None,
            help_url: Some(
                "https://talkbank.org/errors/E601",
            ),
        },
    ],
)
